osha.policy Changelog
=====================

osha.policy 1.2.20 (unreleased)
-------------------------------

- replaced several occurrences of parent-fieldname-image ids through classes (pilz)
- added subtyper for Documents to mark them linklist annotatable (pilz)
- added annotatableLinkList feature (pilz)

osha.policy 1.2.19 (2009-08-24)
-------------------------------

- The slc.autotranslate event has been renamed. Updated in configure.zcml (jcbrand)

osha.policy 1.2.18 (2009-08-17)
-------------------------------

- made the changes in utils.py and handlers.py available again with correct import/dependency (jcbrand)
- removed a pdb statement from ploneflashuploadpatch (thomasw)

osha.policy 1.2.17 (2009-08-12)
-------------------------------
-reverting configure.zcml, which I had forgotten earlier (thomasw)

osha.policy 1.2.16 (2009-08-12)
-------------------------------

- reverted utils.py and handlers.py due to unsolved import/dependency issues (thomasw)

osha.policy 1.2.15 (2009-08-12)
-------------------------------

- For consistency reasons, we also include the "country" field in the PressRelease-schemaextender. PressRelease is derived
from ATNewsItem, which is extended by our TaggingSchemaExtenderDocument. Lately, the document-extender has the country field. 
If a PressRelease doesn't also have this field, it can lead to an error when trying to translate it. (thomasw)
- fixed typo in LEX vocabulary that prevented legislation directives showing up in section A/4 (thomasw)
- Add scripts dir with new script set_pdf_metadata.py (brand)
- Add extractPDFText to utils (brand)
- Add event handler handle_auto_translated_files for the slc.autotranslate custom event (brand)

osha.policy 1.2.14 (2009-08-02)
-------------------------------

- removed the getCountry script. We have a generated accessor with the same name. This can
  lead to wrong results in the catalog's metadata (thomasw)

osha.policy 1.2.13 (2009-08-02)
-------------------------------
