@@ -7,6 +7,8 @@ osha.policy 1.2.20 (unreleased)
 - replaced several occurrences of parent-fieldname-image ids through classes (pilz)
 - added subtyper for Documents to mark them linklist annotatable (pilz)
 - added annotatableLinkList feature (pilz)
+- added title and description for the LineField (pilz)
+
 
 osha.policy 1.2.19 (2009-08-24)
 -------------------------------
